Спринт12: Изменить принцип работы с БД